--- a/style.css
+++ b/style.css
@@ -48,6 +48,15 @@ header {
     box-shadow: var(--shadow);
 }
 
+.logo {
+    width: 80px;
+    height: auto;
+    margin-bottom: 16px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 header h1 {
     color: var(--emendare-blue);
     font-size: 32px;
